--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,10 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "SCSS",
+      "SCSS/section"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -21,6 +24,7 @@
     {
       "path": "SCSS/main.scss",
       "imports": [
+        "SCSS/config/media.scss",
         "SCSS/config/_variables.scss",
         "SCSS/config/_mixins.scss",
         "SCSS/layout/_font.scss",
@@ -32,7 +36,9 @@
         "SCSS/section/burger.scss",
         "SCSS/section/team.scss",
         "SCSS/section/menu.scss",
-        "SCSS/section/review.scss"
+        "SCSS/section/review.scss",
+        "SCSS/section/order.scss",
+        "SCSS/section/map.scss"
       ]
     }
   ],
@@ -87,7 +93,7 @@
     }
   },
   "browser-sync": {
-    "enable": false,
+    "enable": true,
     "clicks": true,
     "forms": true,
     "scroll": true
