All_pages_adaptiv

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,6 +32,7 @@
         "SCSS/layout/_base.scss",
         "SCSS/section/pagination.scss",
         "SCSS/section/first.scss",
+        "SCSS/section/hamburger_menu.scss",
         "SCSS/section/second.scss",
         "SCSS/section/burger.scss",
         "SCSS/section/team.scss",
