--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,7 +39,10 @@
         "SCSS/section/menu.scss",
         "SCSS/section/review.scss",
         "SCSS/section/order.scss",
-        "SCSS/section/map.scss"
+        "SCSS/section/map.scss",
+        "SCSS/section/order_overlay.scss",
+        "SCSS/section/review_overlay.scss",
+        "SCSS/section/composition.scss"
       ]
     }
   ],
